@@ -1,0 +1,12 @@
+<html>
+<head>
+<title>This is the InnerLinkTest</title>
+</head>
+<body>
+<h1>This is the InnerLinkTest</h1>
+<p>  see also <a href="#1">[1]</a> and <a href="#2">[2]</a></p>
+<p>  <a name="1">[1]</a> "Zope Book" by Amos Lattmeier and Michel Pelletier</p>
+<p>  <a name="2">[2]</a> "Python Book" by Guido van Rossum</p>
+</body>
+</html>
+
