@@ -28,7 +28,7 @@
 </p></li>
 
 </ul>
-<p>.. <a href="#1">[1]</a> (The referring text should be a paragraph, not a header, and
+<p><a name="1">[1]</a> (The referring text should be a paragraph, not a header, and
 should contain a reference to this footnote, footnote "<a href="#1">[1]</a>".)<p>  Some hrefs, in a definition list:</p>
 <dl>
 <dt>  _Regular_</dt>
